batch-export/force-app/main/default/objects/CaseB__b/CaseB__b.object-meta.xml
<CustomObject>
    <label>CaseB</label>
    <pluralLabel>CasesB</pluralLabel>
</CustomObject>