batch-export/force-app/main/default/objects/CaseB__b/fields/Batch_Export_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Export_Id__c</fullName>
    <label>Batch Export Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>