batch-export/force-app/main/default/objects/CaseB__b/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>