batch-export/force-app/main/default/objects/CaseB__b/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>