batch-export/force-app/main/default/objects/CaseB__b/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>