batch-export/force-app/main/default/objects/CaseB__b/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>