batch-export/force-app/main/default/objects/CaseB__b/fields/Supplied_Company__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Company__c</fullName>
    <label>Supplied Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>