batch-export/force-app/main/default/objects/CaseB__b/fields/Supplied_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Email__c</fullName>
    <label>Supplied Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>