batch-export/force-app/main/default/objects/CaseB__b/fields/Supplied_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Name__c</fullName>
    <label>Supplied Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>