batch-export/force-app/main/default/objects/CaseB__b/fields/Supplied_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Phone__c</fullName>
    <label>Supplied Phone</label>
    <type>Phone</type>
</CustomField>